# ingestor

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  metrics.py
app/dependencies/: auth.py  redis.py
app/middleware/: rate_limit.py
app/schemas/: metrics.py
app/services/: kafka_circuit_breaker.py  kafka_dlq.py  kafka_producer.py  kafka_retry.py  rate_limiter.py
app/utils/: jwt.py
tests/: conftest.py  test_api.py  test_schemas.py
