[project]
name = "ingestor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
]
[project.optional-dependencies]
dev = [
    "editorconfig-checker==3.2.1",
    "pre-commit>=4.3.0",
    "ruff==0.11.13",
]
